fixing tooltips on collapsed nav

--- a/app/styles/layout/_primary-nav.scss
+++ b/app/styles/layout/_primary-nav.scss
@@ -5,6 +5,7 @@
   // grid-gap: .5rem;
 }
 
+.nav-pf-vertical.primary-nav { overflow-y: visible; }
 
 .md-open-menu-container {
   z-index: 100000;
